syntax = "proto3";

package proto;
option go_package = ".;proto";

message CarRequest {
  int64  id    = 1;
	string make  = 2;
	string model = 3;
	string vin   = 4;
}

message StatusResponse {
	int32 status = 1;
}

service AddCarService {
	rpc Create(CarRequest)  returns (StatusResponse);
	rpc GetById(CarRequest) returns (StatusResponse);
	rpc GetAll(CarRequest)  returns (StatusResponse);
	rpc Update(CarRequest)  returns (StatusResponse);
	rpc Delete(CarRequest)  returns (StatusResponse);
}

